--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -62,6 +62,13 @@
     "clusters": 50,
     "sgd iterations": 15
   },
+  "deep neural network (h=8, n=600)": {
+    "hidden layers": 8,
+    "hidden neurons": 600,
+    "dropout rate": 0.5,
+    "epochs": 10,
+    "batch size": 64
+  },
   "combinations": {
     "baseline": {
       "sequences": "no sequences",
@@ -108,6 +115,11 @@
       "sgns": "triple sentence sgns",
       "classification": "linear projection (c=50)"
     },
+    "ts+dnn(h=8,n=600)": {
+      "sequences": "triple sentences",
+      "sgns": "triple sentence sgns",
+      "classification": "deep neural network (h=8, n=600)"
+    },
     "gw+distknn(k=5)": {
       "sequences": "graph walk sentences",
       "sgns": "graph walk sentence sgns",
@@ -142,6 +154,11 @@
       "sequences": "graph walk sentences",
       "sgns": "graph walk sentence sgns",
       "classification": "linear projection (c=50)"
+    },
+    "gw+dnn(h=8,n=600)": {
+      "sequences": "graph walk sentences",
+      "sgns": "graph sentence sgns",
+      "classification": "deep neural network (h=8, n=600)"
     }
   }
 }
