--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -69,12 +69,19 @@
     "batch size": 32,
     "model path": "data/algorithm_io/dnn_4_3600.h5"
   },
-  "deep neural network (h=8, n=3600)": {
+  "deep neural network (h=8, n=2400)": {
     "hidden layers": 8,
-    "hidden neurons": 3600,
+    "hidden neurons": 2400,
     "epochs": 8,
-    "batch size": 32,
-    "model path": "data/algorithm_io/dnn_8_3600.h5"
+    "batch size": 128,
+    "model path": "data/algorithm_io/dnn_8_2400.h5"
+  },
+  "concat neural network (net=30, n=2400)": {
+    "networks": 30,
+    "hidden neurons": 2400,
+    "epochs": 5,
+    "batch size": 64,
+    "model path": "data/algorithm_io/concatnn_30_2400.h5"
   },
   "combinations": {
     "baseline": {
@@ -127,10 +134,15 @@
       "sgns": "triple sentence sgns",
       "classification": "deep neural network (h=4, n=3600)"
     },
-    "ts+dnn(h=8,n=3600)": {
+    "ts+dnn(h=8,n=2400)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
-      "classification": "deep neural network (h=8, n=3600)"
+      "classification": "deep neural network (h=8, n=2400)"
+    },
+    "ts+concatnn(net=30,n=2400)": {
+      "sequences": "triple sentences",
+      "sgns": "triple sentence sgns",
+      "classification": "concat neural network (net=30, n=2400)"
     },
     "gw+distknn(k=5)": {
       "sequences": "graph walk sentences",
