--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -76,10 +76,11 @@
     "batch size": 128,
     "model path": "data/algorithm_io/dnn_8_2400.h5"
   },
-  "concat neural network (net=30, n=2400)": {
+  "concat neural network (net=30, h=1, n=2400)": {
     "networks": 30,
+    "hidden layers": 1,
     "hidden neurons": 2400,
-    "epochs": 5,
+    "epochs": 8,
     "batch size": 64,
     "model path": "data/algorithm_io/concatnn_30_2400.h5"
   },
@@ -142,7 +143,7 @@
     "ts+concatnn(net=30,n=2400)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
-      "classification": "concat neural network (net=30, n=2400)"
+      "classification": "concat neural network (net=30, h=1, n=2400)"
     },
     "gw+distknn(k=5)": {
       "sequences": "graph walk sentences",
@@ -178,11 +179,6 @@
       "sequences": "graph walk sentences",
       "sgns": "graph walk sentence sgns",
       "classification": "linear projection (c=50)"
-    },
-    "gw+dnn(h=8,n=600)": {
-      "sequences": "graph walk sentences",
-      "sgns": "graph sentence sgns",
-      "classification": "deep neural network (h=8, n=600)"
     }
   }
 }
