--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -76,13 +76,23 @@
     "batch size": 128,
     "model path": "data/algorithm_io/dnn_8_2400.h5"
   },
-  "concat neural network (net=30, h=1, n=2400)": {
+  "concat neural network (act=relu, net=30, h=1, n=2400)": {
     "networks": 30,
     "hidden layers": 1,
     "hidden neurons": 2400,
     "epochs": 8,
     "batch size": 64,
-    "model path": "data/algorithm_io/concatnn_30_2400.h5"
+    "activation": "relu",
+    "model path": "data/algorithm_io/concatnn_relu_30_2400.h5"
+  },
+  "concat neural network (act=linear, net=30, h=1, n=2400)": {
+    "networks": 30,
+    "hidden layers": 1,
+    "hidden neurons": 2400,
+    "epochs": 8,
+    "batch size": 64,
+    "activation": "linear",
+    "model path": "data/algorithm_io/concatnn_linear_30_2400.h5"
   },
   "combinations": {
     "baseline": {
@@ -143,7 +153,12 @@
     "ts+concatnn(net=30,n=2400)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
-      "classification": "concat neural network (net=30, h=1, n=2400)"
+      "classification": "concat neural network (act=relu, net=30, h=1, n=2400)"
+    },
+    "ts+concatnn(act=linear,net=30,n=2400)": {
+      "sequences": "triple sentences",
+      "sgns": "triple sentence sgns",
+      "classification": "concat neural network (act=linear, net=30, h=1, n=2400)"
     },
     "gw+distknn(k=5)": {
       "sequences": "graph walk sentences",
