--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -76,18 +76,18 @@
     "batch size": 128,
     "model path": "data/algorithm_io/dnn_8_2400.h5"
   },
-  "concat neural network (act=relu, net=30, h=1, n=2400)": {
+  "concat neural network (act=relu, net=30, h=2, n=2400)": {
     "networks": 30,
-    "hidden layers": 1,
+    "hidden layers": 2,
     "hidden neurons": 2400,
     "epochs": 8,
     "batch size": 64,
     "activation": "relu",
     "model path": "data/algorithm_io/concatnn_relu_30_2400.h5"
   },
-  "concat neural network (act=linear, net=30, h=1, n=2400)": {
+  "concat neural network (act=linear, net=30, h=2, n=2400)": {
     "networks": 30,
-    "hidden layers": 1,
+    "hidden layers": 2,
     "hidden neurons": 2400,
     "epochs": 8,
     "batch size": 64,
@@ -150,15 +150,15 @@
       "sgns": "triple sentence sgns",
       "classification": "deep neural network (h=8, n=2400)"
     },
-    "ts+concatnn(net=30,n=2400)": {
+    "ts+concatnn(act=relu,net=30,n=2400)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
-      "classification": "concat neural network (act=relu, net=30, h=1, n=2400)"
+      "classification": "concat neural network (act=relu, net=30, h=2, n=2400)"
     },
     "ts+concatnn(act=linear,net=30,n=2400)": {
       "sequences": "triple sentences",
       "sgns": "triple sentence sgns",
-      "classification": "concat neural network (act=linear, net=30, h=1, n=2400)"
+      "classification": "concat neural network (act=linear, net=30, h=2, n=2400)"
     },
     "gw+distknn(k=5)": {
       "sequences": "graph walk sentences",
