--- a/paths_config.json
+++ b/paths_config.json
@@ -47,7 +47,7 @@
   "embeddings plot": "data/plots/2d_embeddings.png",
   "subclass offset cluster": "data/algorithm_io/subclass_offsets-20161107.json",
 
-  "execution results": "evaluation/results_{}-20161107.csv",
+  "execution results": "data/evaluation/results/results_{}-20161107.csv",
   "evaluation": "evaluation/hybrid_evaluation-20161107.csv",
   "local taxonomic overlaps": "data/evaluation/local_tax_overlaps_{}-20161107.csv",
 
