--- a/algorithm_config.json
+++ b/algorithm_config.json
@@ -103,6 +103,24 @@
     "activation": "relu",
     "model path": "data/algorithm_io/concatnn_relu_10_3_1200.h5"
   },
+  "concat neural network (act=relu, net=20, h=3, n=1200)": {
+    "networks": 20,
+    "hidden layers": 3,
+    "hidden neurons": 1200,
+    "epochs": 8,
+    "batch size": 64,
+    "activation": "relu",
+    "model path": "data/algorithm_io/concatnn_relu_20_3_1200.h5"
+  },
+  "concat neural network (act=relu, net=30, h=3, n=600)": {
+    "networks": 30,
+    "hidden layers": 3,
+    "hidden neurons": 600,
+    "epochs": 8,
+    "batch size": 64,
+    "activation": "relu",
+    "model path": "data/algorithm_io/concatnn_relu_30_3_600.h5"
+  },
   "combinations": {
     "baseline": {
       "sequences": "no sequences",
@@ -169,45 +187,15 @@
       "sgns": "triple sentence sgns",
       "classification": "concat neural network (act=relu, net=10, h=3, n=1200)"
     },
-    "gw+distknn(k=5)": {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "distance-knn (k=5)"
+    "ts+concatnn(act=relu,net=20,h=3,n=1200)": {
+      "sequences": "triple sentences",
+      "sgns": "triple sentence sgns",
+      "classification": "concat neural network (act=relu, net=20, h=3, n=1200)"
     },
-    "gw+distknn(k=10)": {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "distance-knn (k=10)"
-    },
-    "gw+distknn(k=15)": {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "distance-knn (k=15)"
-    },
-    "gw+distknn(k=20)": {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "distance-knn (k=20)"
-    },
-    "gw+linproj(c=1)" : {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "linear projection (c=1)"
-    },
-    "gw+linproj(c=25)" : {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "linear projection (c=25)"
-    },
-    "gw+linproj(c=50)" : {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "linear projection (c=50)"
-    },
-    "gw+concatnn(act=relu,net=20,n=2400)": {
-      "sequences": "graph walk sentences",
-      "sgns": "graph walk sentence sgns",
-      "classification": "concat neural network (act=relu, net=20, h=2, n=2400)"
+      "ts+concatnn(act=relu,net=30,h=3,n=600)": {
+      "sequences": "triple sentences",
+      "sgns": "triple sentence sgns",
+      "classification": "concat neural network (act=relu, net=30, h=3, n=600)"
     }
   }
 }
